Fixed spacing between cards in Services component by modifying grid properties

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,6 +1,6 @@
 .services__container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 3rem;
 }
 
@@ -54,8 +54,7 @@
 
 @media screen and (max-width: 1024px) {
     .services__container {
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
+        grid-template-columns: 1fr;
     }
 
     .service {
@@ -69,6 +68,5 @@
 @media screen and (max-width: 600px) {
     .services__container {
         grid-template-columns: 1fr;
-        gap: 1.5rem;
     }
 }
